--- a/src/Header.css
+++ b/src/Header.css
@@ -1,4 +1,13 @@
+.header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    z-index: 100;
+    border-bottom: 1px solid #ffffff;
+}
 .header_logo{
     object-fit: contain;
     height: 40px;
+}.header_icon{
+    padding: 20px;
 }
